# NumberConverter

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  MainWindow.cpp  MainWindow.h  MainWindow.ui  NumberConverter.cpp  NumberConverter.h  NumberConverter.pro  README.md  Ut.cpp  Ut.h  main.cpp
src/: converter.rs  errors.rs  main.rs  parser.rs  utils.rs
