[package]
name = "number_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-rational = "0.4.0"
num-traits = "0.2.15"
regex = "1.5.6"
